# maxapi-sdk

./: CHANGELOG.md  MIGRATION_GUIDE.md  README.md  RELEASE_GUIDE.md  TEST_REPORT.txt  pyproject.toml
.github/workflows/: publish.yml  tests.yml
maxapi/: __init__.py  bot.py  callback_schema.py  dispatcher.py
maxapi/builders/: __init__.py  keyboards.py  media.py
maxapi/client/: __init__.py  default.py
maxapi/compat/: __init__.py
maxapi/connection/: __init__.py  base.py
maxapi/exceptions/: __init__.py  max.py
maxapi/filters/: __init__.py  base.py  command.py  common.py  text.py
maxapi/fsm/: __init__.py  context.py  filters.py  middleware.py  state.py
maxapi/fsm/storage/: base.py  memory.py
maxapi/middlewares/: __init__.py  base.py
maxapi/plugins/: __init__.py  base.py
maxapi/runners/: __init__.py  polling.py  webhook.py
maxapi/transport/: __init__.py  client.py  config.py  errors.py
maxapi/types/: __init__.py  base.py  bot_mixin.py  models.py
tests/: test_bot_endpoints.py  test_dispatcher_and_runners.py  test_iteration_four_features.py  test_iteration_three_features.py  test_transport.py
