[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maxapi-sdk"
version = "0.12.2"
description = "Python SDK for MAX Messenger Bot API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "Maxim Strekolovskiy"}
]
maintainers = [
  {name = "Maxim Strekolovskiy"}
]
keywords = ["max", "messenger", "bot", "sdk", "api", "asyncio"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Framework :: AsyncIO",
  "Typing :: Typed"
]
urls = {Homepage = "https://github.com/Maxi-online/maxapi-sdk", Repository = "https://github.com/Maxi-online/maxapi-sdk", Issues = "https://github.com/Maxi-online/maxapi-sdk/issues"}
dependencies = [
  "aiofiles>=24.1.0",
  "aiohttp>=3.9.0",
  "pydantic>=2.8.0"
]

[project.optional-dependencies]
webhook = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0"
]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "build>=1.2.0",
  "twine>=5.0.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
maxapi = ["py.typed"]

[tool.setuptools.packages.find]
include = ["maxapi*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
